k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeflix-catalog-admin-api
  labels:
    app: codeflix-catalog-admin-api
spec:
  selector:
    matchLabels:
      app: codeflix-catalog-admin-api
  template:
    metadata:
      labels:
        app: codeflix-catalog-admin-api
    spec:
      containers:
      - name: codeflix-catalog-admin-api
        image: epscavalcante/codeflix-catalog-admin-api:v0.0.10
        imagePullPolicy: Always
        args: [ "dist/main" ]
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
