k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeflix-catalog-admin-api-service
spec:
  type: ClusterIP
  selector:
    app: codeflix-catalog-admin-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
