k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-codeflix-catalog-admin-api
  labels:
    name: nginx-codeflix-catalog-admin-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-main"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - catalog-admin-api.epscavalcante.dev
    secretName: letsencrypt-main-secret
  rules:
  - host: "catalog-admin-api.epscavalcante.dev"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: codeflix-catalog-admin-api-service
            port: 
              number: 80
